
2009年 08月 26日 星期三 13:55:28 CST
	加入使用gmlive发送网址给正在运行的gmlive播放的功能，此功能用用于扩展浏览器解释pps://之类的操作
	试验mms成功

2009年 08月 25日 星期二 21:51:48 CST
	开始加入ppstream支持，框架已成，列表用的是mms方式，播放器复制pplive
	不会未成功。
	开始加入单一实例检测功能。

2009年 08月 08日 星期六 15:03:34 CST
	更新了sopcast刚启动时可能会卡死的bug。
	更新了快捷键翻译的简体中文po。
	去除了nslive,以pplive替代之。
	界面上添加了刷新频道列表的按钮。

2009年 02月 10日 星期二 00:27:30 UTC lerosua<lerosua@gmail.com>
	添加可配置托盘功能，即可选择使用或不使用托盘功能。

2009年 02月 08日 星期日 23:07:46 UTC lerosua<lerosua@gmail.com>
	wind添加了托盘功能，隐藏工具栏菜单
	lerosua添加mms列表的网络下载频道列表地址

2009年 01月 24日 星期六 20:32:05 UTC lerosua<lerosua@gmail.com>
	添加一个参数，让可以设置启动时不自动更新sopcast的频道列表，这是因为
	sopcast的频道列表经常性不能访问的原因。还加了打开sopcast列表错误后
	可以手工选择一个文件来替代sopcast的频道列表.

2008年 12月 14日 星期日 18:56:28 UTC lerosua<lerosua@gmail.com>
	补进tualatrix@gmail.com 的补丁，是修正界面排版的

2008年 11月 10日 星期一 17:31:03 CST lerosua<lerosua@gmail.com>
	添加了窗口改变大小的信号，用于处理mplayer的画面改变大小后的
	宽高比，目前能自动适应，不过比例不完美，因为浮点数的比例被改变
	成了整型的原因，需要继续完善。
	--添加了一个变量保存画面的纵横比例gmp_rate

2008年 11月 06日 星期四 17:15:42 CST wind<xihelsgmail.com>
	合并了 From: 蔡瀛 <alonesniper@gmail.com> 的补丁.
	为添加置顶功能与修正检测nslive和sopcast的程序路径问题（从PATH里
	检测）

2008年 11月 06日 星期四 17:15:42 CST lerosua<lerosua@gmail.com>
	修正播放文件的文件名中有空格不能播放的bug，打开网络流一样。

2008年 10月 28日 星期二 11:20:35 CST lerosua<lerosua@gmail.com>
	添加了播放url的对话窗口，并基本能工作
	修正bug --issues 19

2008年 06月 29日 星期日 10:59:11 CST lerosua<lerosua@gmail.com>
	添加在嵌入模式下双击mplayer画面全屏功能。
	修正bug --issues 5
	修正bug --issues 16

2008年 02月 25日 星期一 19:49:58 CST lerosua<lerosua@gmail.com>
	修正界面文件不能翻译的问题，不过在界面文件中的中文需要改成
	英文才能合乎规范。

2008年 02月 20日 星期三 20:34:51 CST lerosua<lerosua@gmail.com>
	初步完成sopcast,nslive的检测。每次提示是否支持。如果在配置
	里关了支持则不会检测了。

2008-02-19  lerosua <leroau@gmail.com>
	修正自定义sopcast列表下载错误的BUG。
	添加检测sopcast,nslive的函数。

2008-01-24  yetist  <yetist@gmail.com>

	* configure.in: 
	fixed autogen.sh error!

2008-01-23  yetist  <yetist@gmail.com>

	* configure.in: 
	* Makefile.am: 
	add enable-plugin args.

2008-01-04  yetist  <yetist@gmail.com>

	* plugins/tvonline/tvonline.py: 
	* plugins/tvonline/Makefile.am: 