@@ -25,39 +25,39 @@ PKG_CHECK_MODULES(PACKAGE, [$pkg_modules])
 AC_SUBST(PACKAGE_CFLAGS)
 AC_SUBST(PACKAGE_LIBS)
 
-AC_MSG_CHECKING([whether Totem plugin support is requested])
-AC_ARG_ENABLE([plugin],
-        AS_HELP_STRING([--enable-plugin],[Enable totem plugin support]),
-        [enable_plugin=$enableval have_python=$enableval],
-        [enable_plugin=autodetect have_python=yes])
-AC_MSG_RESULT([$enable_plugin])
-
-if test "x$have_python" != "xno"; then
-        AM_PATH_PYTHON([2.4],[],[no])
-        if test "x$PYTHON" = "x:"; then
-                have_python=no
-        fi
-fi
-
-if test "x$have_python" != "xno"; then
-    AM_PATH_PROG_WITH_TEST(have_totem, totem, [have_totem=yes],[no])
-    if test "x$have_totem" != "xno"; then
-        totem_version=`totem --version|awk -F. '{print $2}'` 
-        if test $totem_version -lt 20; then
-            have_totem=no
-        else
-            have_totem=yes
-            prefixdir="$(dirname $(dirname `which totem`))/lib"
-            AC_SUBST(prefixdir)
-            PLUGINDIR='${prefixdir}/totem/plugins'
-            AC_SUBST(PLUGINDIR)
-            ENABLE_PLUGIN=${have_totem}
-            AC_SUBST(ENABLE_PLUGIN)
-        fi
-    fi
-fi
-
-AM_CONDITIONAL([ENABLE_PLUGIN],[test "x$have_totem" = "xyes"])
+dnl AC_MSG_CHECKING([whether Totem plugin support is requested])
+dnl AC_ARG_ENABLE([plugin],
+dnl         AS_HELP_STRING([--enable-plugin],[Enable totem plugin support]),
+dnl         [enable_plugin=$enableval have_python=$enableval],
+dnl         [enable_plugin=autodetect have_python=yes])
+dnl AC_MSG_RESULT([$enable_plugin])
+dnl 
+dnl if test "x$have_python" != "xno"; then
+dnl         AM_PATH_PYTHON([2.4],[],[no])
+dnl         if test "x$PYTHON" = "x:"; then
+dnl                 have_python=no
+dnl         fi
+dnl fi
+dnl 
+dnl if test "x$have_python" != "xno"; then
+dnl     AM_PATH_PROG_WITH_TEST(have_totem, totem, [have_totem=yes],[no])
+dnl     if test "x$have_totem" != "xno"; then
+dnl         totem_version=`totem --version|awk -F. '{print $2}'` 
+dnl         if test $totem_version -lt 20; then
+dnl             have_totem=no
+dnl         else
+dnl             have_totem=yes
+dnl             prefixdir="$(dirname $(dirname `which totem`))/lib"
+dnl             AC_SUBST(prefixdir)
+dnl             PLUGINDIR='${prefixdir}/totem/plugins'
+dnl             AC_SUBST(PLUGINDIR)
+dnl             ENABLE_PLUGIN=${have_totem}
+dnl             AC_SUBST(ENABLE_PLUGIN)
+dnl         fi
+dnl     fi
+dnl fi
+dnl 
+dnl AM_CONDITIONAL([ENABLE_PLUGIN],[test "x$have_totem" = "xyes"])
 
 GETTEXT_PACKAGE=gmlive
 AC_SUBST(GETTEXT_PACKAGE)
@@ -68,8 +68,6 @@ AM_GLIB_GNU_GETTEXT
 AC_CONFIG_FILES([Makefile
 	   src/Makefile
            po/Makefile.in
-	   plugins/Makefile
-	   plugins/tvonline/Makefile
            data/gmlive.desktop.in
 	   data/Makefile])
 AC_OUTPUT
